// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CImageLazy renders correctly 1`] = `
<svg
  class="c-opacity-0"
  style="background-color: transparent;"
/>
`;

exports[`CImageLazy renders correctly 2`] = `
<svg
  class="c-opacity-0 c-float-right c-img-fluid c-w-100 c-rounded-right c-d-block"
  height="200"
  style="background-color: transparent;"
  width="400"
/>
`;
